data/themes/default/style.css
/* ... */
TabWidget {
	background-color: #262b30;
	qproperty-tabText: rgba(255, 255, 255, 180);
	qproperty-tabTitleText: #fff;
	qproperty-tabSelected: #323940;
	qproperty-tabBackground: #181b1f;
	qproperty-tabBorder: #181b1f;
}

GroupBox {
	background-color: #262b30;
}

/* main toolbar oscilloscope - can have transparent bg now */

Oscilloscope {
	background: none;
	border: none;
	qproperty-normalColor: rgb(71, 253, 133);
	qproperty-clippingColor: rgb(255, 64, 64);
}

/* main toolbar cpu load widget - this can have transparent bg now */

CPULoadWidget {
	border: none;
	background: url(resources:cpuload_bg.png);
}

/* scrollbar: trough */

QScrollBar:horizontal {
	border-top: 3px solid #262b30;
	background: #262b30;
	height: 12px;
	margin: 0px 12px;
}
QScrollBar:vertical {
	border-left: 3px solid #262b30;
	background: #262b30;
	width: 12px;
	margin: 12px 0px;
}

/* scrollbar: trough clicky things */

QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal,
QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
	background: none;
}

QScrollBar::add-page:horizontal:pressed, QScrollBar::sub-page:horizontal:pressed,
QScrollBar::add-page:vertical:pressed, QScrollBar::sub-page:vertical:pressed {
	background: rgba(0,0,0,50);
}

/* scrollbar: handles (sliders) */

QScrollBar::handle:horizontal {
	background: #3f4750;
	border: none;
	border-radius: 4px;
	min-width: 24px;
}

QScrollBar::handle:horizontal:hover {
	background: #525e69;
}

QScrollBar::handle:horizontal:pressed {
	background: rgba(11,213,86,100);
}

QScrollBar::handle:vertical {
	background: #3f4750;
	border: none;
	border-radius: 4px;
	min-height: 24px;
}

QScrollBar::handle:vertical:hover {
	background: #525e69;
}

QScrollBar::handle:vertical:pressed {
	background: rgba(11,213,86,100);
}

QScrollBar::handle:horizontal:disabled, QScrollBar::handle:vertical:disabled  {
	background: #262b30;
	border-radius: 1px;
	border: none;
}

/* arrow buttons */

QScrollBar::add-line, QScrollBar::sub-line {
	background: #262b30;
	border-radius: 0px;
	border: none;
	subcontrol-origin: margin;
}

QScrollBar::add-line:horizontal 	{  	subcontrol-position: right; width: 12px;}
QScrollBar::sub-line:horizontal 	{ 	subcontrol-position: left; width: 12px;}
QScrollBar::add-line:vertical 		{ 	subcontrol-position: bottom; height: 12px;}
QScrollBar::sub-line:vertical 		{ 	subcontrol-position: top; height: 12px;}

QScrollBar::add-line:hover, QScrollBar::sub-line:hover {
	background: #262b30;
}

QScrollBar::add-line:pressed, QScrollBar::sub-line:pressed {
	background: #262b30;
}

QScrollBar::add-line:disabled, QScrollBar::sub-line:disabled {
	background: #262b30;
}

/* arrow button arrows */

QScrollBar::left-arrow:horizontal, QScrollBar::right-arrow:horizontal,
QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical {
	border: none;
	background-color: none;
	width: 5px;
	height: 5px;
}

QScrollBar::left-arrow:horizontal, QScrollBar::right-arrow:horizontal {
	margin-top: 3px;
}

QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical {
	margin-left: 3px;
}

QScrollBar::left-arrow:horizontal { background-image: url(resources:sbarrow_left.png);}
QScrollBar::right-arrow:horizontal { background-image: url(resources:sbarrow_right.png);}
QScrollBar::up-arrow:vertical { background-image: url(resources:sbarrow_up.png);}
QScrollBar::down-arrow:vertical { background-image: url(resources:sbarrow_down.png);}
QScrollBar::left-arrow:horizontal:disabled { background-image: url(resources:sbarrow_left_d.png);}
QScrollBar::right-arrow:horizontal:disabled { background-image: url(resources:sbarrow_right_d.png);}
QScrollBar::up-arrow:vertical:disabled { background-image: url(resources:sbarrow_up_d.png);}
QScrollBar::down-arrow:vertical:disabled { background-image: url(resources:sbarrow_down_d.png);}

/* background for song editor and bb-editor */

TrackContainerView QFrame {
	background-color: #262b30;
}

/* background for track controls */
TrackView > QWidget {
	background-color: #3B424A;
}


/* autoscroll, loop, stop behaviour toggle buttons */

/* track background colors */
TrackContentWidget {
	qproperty-darkerColor: #0C0E0F;
	qproperty-lighterColor: #14151A;
	qproperty-gridColor: #262B30;
	qproperty-embossColor: rgba( 0, 0, 0, 0 );
}


/* gear button in tracks */

TrackOperationsWidget > QPushButton {
	max-height: 26px;
	max-width: 26px;
	min-height: 26px;
	min-width: 26px;
	background: none;
	border: none;
}

TrackOperationsWidget > QPushButton::menu-indicator {
	image: url(resources:trackop.png);
	subcontrol-origin: padding;
	subcontrol-position: center;
	position: relative;
	top: 1px;
}

TrackOperationsWidget > QPushButton::menu-indicator:pressed,
TrackOperationsWidget > QPushButton::menu-indicator:checked {
	image: url(resources:trackop.png);
	position: relative;
	top: 2px;
}

/* font sizes */

nameLabel, effectLabel, sf2InstrumentView > QLabel {
	font-size:10px;
}

/* main toolbar sliders (master vol, master pitch) */

AutomatableSlider::groove:vertical {
	background: #040506;
	border: none;
	border-radius: 2px;
	width: 2px;
	margin: 2px 2px;
}

AutomatableSlider::handle:vertical {
	background: none;
	border-image: url(resources:main_slider.png);
	width: 26px;
	height: 10px;
	border-radius: 2px;
	margin: -4px -12px -2px;
}

/* window that shows up when you add effects */

EffectSelectDialog QScrollArea {
	background: #262b30;
}

/* the inner boxes in LADSPA effect windows */

EffectControlDialog QGroupBox {
	background: #262b30;
	margin-top: 1ex;
	padding: 10px 2px 1px;
	border-radius: 4px;
	border: none;
}

/* the inner box titles when present (channel 1, channel 2...) */

EffectControlDialog QGroupBox::title {
	subcontrol-origin: margin;
	subcontrol-position: top center;
	background: #262b30;
	color: #d1d8e4;
	border-radius: 2px;
	border: none;
	padding: 2px 1px;
}

/* main toolbar */

QWidget#mainToolbar {
	background: qlineargradient(spread:reflect, x1:0, y1:0, x2:0, y2:1, stop:0 #373f47, stop:1 #1d2122);
}
/* ... */

